rust/crates/rax/src/string/rules/snapshots/rax__string__rules__byte_count__tests__count_exact_length.snap
---
source: crates/rax/src/string/rules/byte_count.rs
expression: result
---
Ok(
    (
        "test",
        "",
    ),
)
