rust/crates/rax/src/string/rules/snapshots/rax__string__rules__byte_count__tests__count_more_than_length.snap
---
source: crates/rax/src/string/rules/byte_count.rs
expression: result
---
Err(
    "input too short",
)
