rust/crates/rax/src/string/rules/snapshots/rax__string__rules__byte_count__tests__invalid_utf8_boundary.snap
---
source: crates/rax/src/string/rules/byte_count.rs
expression: result
---
Err(
    "input too short or invalid UTF-8 boundary.",
)
