rust/crates/rax/src/string/rules/snapshots/rax__string__rules__byte_count__tests__utf8_valid_boundary.snap
---
source: crates/rax/src/string/rules/byte_count.rs
expression: result
---
Ok(
    (
        "你",
        "好世界",
    ),
)
